# tree-detection-framework

./: .dockerignore  CONTRIBUTING.md  Dockerfile  README.md  detect_script.py  pyproject.toml
.github/workflows/: publish-image.yml  pytest.yaml
examples/: predict_detections.ipynb  predict_detections_sam2.ipynb  sequential_geometric_detector.ipynb
sandbox/detection/: detect_raw_drone_images.ipynb  detectree2_detections.ipynb  geometric_detections.ipynb  multiple_geometry_columns.ipynb  plot_detections.ipynb  random_detections.ipynb  save_multi_layer_detections_file.ipynb  scratch_detect_raw_drone_images.ipynb  seq_geo_detector.ipynb  sequential_geometric_detector.ipynb  zero_length_tiling.ipynb
sandbox/evaluation/: README.md  detection_comparisons.ipynb  dtree2_benchmark.ipynb  evaluating_polygon_predictions.ipynb  matching_points.ipynb  neon_benchmark.ipynb  sam2_dtree2_benchmark.ipynb  sam2_neon_benchmark.ipynb
sandbox/postprocessing/: nms_experiments.ipynb  specify_postprocessing_in_detector.ipynb  split_regions.ipynb
sandbox/preprocessing/: chip_ortho.py  deepforest-detection.ipynb  deepforest-new-dataloader.ipynb  deepforest-with-dataloaders.ipynb  deepforest_train_and_predict.ipynb  preprocessing-for-deepforest.ipynb  test-dataloader-with-dtree2.ipynb
tests/: test_derived_geodatasets.py  test_detector_structure.py  test_evaluate.py  test_geometric.py  test_postprocessing.py  test_visualization.py
tree_detection_framework/: constants.py
tree_detection_framework/detection/: SAM2_detector.py  SAM3_detector.py  detector.py  models.py  region_detections.py
(+19 files in other folders)
